# t1d-celltype-of-action

./: .gitignore  00_env_setup.py  02_ld_clumping.py  03_locus_annotation.py  04_hpap_load.py  05_hpap_expression.py  06_donor_audit.py  07_full_panel_fetch.py  08_tau_specificity.py  09_leukocyte_stage.py  10_cross_validation.py  11_clinical_metadata.py  12_donor_audit_meg3.py  LICENSE  README.md  T1D145_celltype_call_crossvalidation.tsv  download  make_data.py  make_figures.py  notebook.ipynb  notebook7871723919 (9).ipynb  pyproject.toml  requirements.txt  substack_article.md
.github/workflows/: ci.yml
.virtual_documents/: __notebook_source__.ipynb
code/: 00_env_setup.py  01_gwas_t1d_filter.py  02_ld_clumping.py  03_locus_annotation.py  04_hpap_load.py  05_hpap_expression.py  06_donor_audit.py  07_full_panel_fetch.py  08_tau_specificity.py  09_leukocyte_stage.py  10_cross_validation.py  11_clinical_metadata.py  12_donor_audit_meg3.py
data/: PROVENANCE.md
data/processed/: AAB_donor_metadata.tsv  T1D145_celltype_specificity.tsv  T1D145_gene_locus_map.tsv  T1D_donor_metadata.tsv  audit_beta_donors_per_disease.tsv  hpap_T1D145_expression_by_celltype_disease.tsv  leukocyte_immune_tests.tsv  t1d_independent_loci.tsv
docs/: substack_article.md
scripts/: 00_env_setup.py  01_gwas_t1d_filter.py  02_ld_clumping.py  03_locus_annotation.py  04_hpap_load.py  05_hpap_expression.py  06_donor_audit.py  07_full_panel_fetch.py  08_tau_specificity.py  09_leukocyte_stage.py  10_cross_validation.py  11_clinical_metadata.py  12_donor_audit_meg3.py
src/t1d_coa/: __init__.py  config.py  donors.py  hpap.py  plotting.py  provenance.py  stats.py
tests/: test_config.py  test_stats.py
(+171 files in other folders)
