[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t1d-celltype-of-action"
version = "1.0.0"
description = "Map T1D GWAS loci to pancreatic cell types via HPAP scRNA-seq specificity"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "crisprking" }]
keywords = ["type-1-diabetes", "gwas", "scrna-seq", "cell-type-of-action", "hpap"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "httpx>=0.27",
    "tenacity>=8.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
hpap = ["cellxgene", "flatbuffers"]  # only for the FBS decoder

[project.urls]
Repository = "https://github.com/crisprking/t1d-celltype-of-action"
Issues = "https://github.com/crisprking/t1d-celltype-of-action/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # don't double-flag long lines

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
